--- a/clearvoice/config/inference/MossFormerGAN_SE_16K.yaml
+++ b/clearvoice/config/inference/MossFormerGAN_SE_16K.yaml
@@ -1,10 +1,10 @@
-#!/bin/bash 
-mode: 'inference'
+#!/bin/bash
+mode: "inference"
 use_cuda: 1 # 1 for True, 0 for False
 num_gpu: 1
 sampling_rate: 16000
-network: "MossFormerGAN_SE_16K"  ##network type
-checkpoint_dir: "clearvoice/checkpoints/MossFormerGAN_SE_16K"
+network: "MossFormerGAN_SE_16K" ##network type
+checkpoint_dir: "MossFormerGAN_SE_16K"
 
 input_path: "samples/scp/cv_demand_testset_16k.scp"
 output_dir: "outputs/MossFormerGAN_SE_16K" ## output dir to store processed audio
@@ -14,7 +14,7 @@ one_time_decode_length: 10 #maximum segment length for one-pass decoding (second
 decode_window: 10 #one-pass decoding length
 
 # FFT parameters
-win_type: 'hamming'
+win_type: "hamming"
 win_len: 400
 win_inc: 100
 fft_len: 400
